@@ -744,7 +744,7 @@ struct ItemTemplate
 // Benchmarked: Faster than std::map (insert/find)
 typedef UNORDERED_MAP<uint32, ItemTemplate> ItemTemplateContainer;
 
-typedef UNORDERED_MAP<uint32, uint32> ItemFakeEntryContainer;
+typedef UNORDERED_MAP<uint32, uint32> ItemFakeEntryContainer; // custom
 
 struct ItemLocale
 {
